tests/purs/warning/MissingKindDeclaration.out
Error 1 of 4:

  in module [33mMain[0m
  at tests/purs/warning/MissingKindDeclaration.purs:7:1 - 7:21 (line 7, column 1 - line 7, column 21)

    The inferred kind for the data declaration [33mProxy[0m contains polymorphic kinds.
    Consider adding a top-level kind signature as a form of documentation.
    [33m                                   [0m
    [33m  data Proxy :: forall k. k -> Type[0m
    [33m                                   [0m

  in type constructor [33mProxy[0m

  See https://github.com/purescript/documentation/blob/master/errors/MissingKindDeclaration.md for more information,
  or to contribute content related to this error.

Error 2 of 4:

  in module [33mMain[0m
  at tests/purs/warning/MissingKindDeclaration.purs:11:1 - 11:40 (line 11, column 1 - line 11, column 40)

    The inferred kind for the type declaration [33mNatural[0m contains polymorphic kinds.
    Consider adding a top-level kind signature as a form of documentation.
    [33m                                                              [0m
    [33m  type Natural :: forall k. (k -> Type) -> (k -> Type) -> Type[0m
    [33m                                                              [0m

  in type synonym [33mNatural[0m

  See https://github.com/purescript/documentation/blob/master/errors/MissingKindDeclaration.md for more information,
  or to contribute content related to this error.

Error 3 of 4:

  in module [33mMain[0m
  at tests/purs/warning/MissingKindDeclaration.purs:9:1 - 9:20 (line 9, column 1 - line 9, column 20)

    The inferred kind for the newtype declaration [33mF[0m contains polymorphic kinds.
    Consider adding a top-level kind signature as a form of documentation.
    [33m                                          [0m
    [33m  newtype F :: forall k. k -> Type -> Type[0m
    [33m                                          [0m

  in type constructor [33mF[0m

  See https://github.com/purescript/documentation/blob/master/errors/MissingKindDeclaration.md for more information,
  or to contribute content related to this error.

Error 4 of 4:

  in module [33mMain[0m
  at tests/purs/warning/MissingKindDeclaration.purs:13:1 - 13:18 (line 13, column 1 - line 13, column 18)

    The inferred kind for the class declaration [33mClazz[0m contains polymorphic kinds.
    Consider adding a top-level kind signature as a form of documentation.
    [33m                                                              [0m
    [33m  class Clazz :: forall k1 k2 k3. k1 -> k2 -> k3 -> Constraint[0m
    [33m                                                              [0m

  in type class declaration for [33mClazz[0m

  See https://github.com/purescript/documentation/blob/master/errors/MissingKindDeclaration.md for more information,
  or to contribute content related to this error.

